# voice-agent

./: .gitignore  CLAUDE.md  CONFIGURATION_INSTRUCTIONS.md  IMPLEMENTATION_SUMMARY.md  NOISE_REDUCTION_IMPLEMENTATION.md  QUICKSTART.md  README.md
backend/: .gitignore  ENV_SETUP.md  Frontend Codebase Overview.docx  VERTEX_AI_SETUP.md  auth_utils.py  gemini_live_client.py  main.py  pyproject.toml  requirements.txt  requirements_webrtc.txt  start.bat  start_server.py  tools.py  websocket_handler.py
client/: package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/components/: CircularWaveVisualizer.tsx  VoiceWaveform.tsx
client/src/hooks/: useGeminiSession.ts
client/src/services/: audioProcessor.ts  websocketService.ts
client/src/types/: index.ts
